Theme styling updates

--- a/rca/static_src/sass/components/_categories-tablist.scss
+++ b/rca/static_src/sass/components/_categories-tablist.scss
@@ -89,6 +89,10 @@
         &__heading {
             display: none;
         }
+    }
+
+    .filter-bar--stuck & {
+        background-color: $color--black;
 
         &__tab {
             color: $color--meta-darkbg;
