Implements fields and models for innovation landing page

--- a/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
@@ -1,7 +1,7 @@
 {% load wagtailimages_tags %}
 {% image stats_block.background_image max-1000x500 as bg_image %}
 <section class="section section--stat-block {% if stats_block.default_notch_override %}section--stat-block-notch-override{% else %}section--opposite-notch{% endif %} bg bg--stat-block bg--dark" data-stat-block style="--stat-block-bg-image: url('{{ bg_image.url }}')">
-    
+
     <div class="section__notch {% if stats_block.default_notch_override %}{% else %}section__notch--transparent section__notch--opposite{% endif %}">
         <div class="section__notch-fill section__notch-fill--second-col"></div>
     </div>
@@ -11,8 +11,8 @@
                 <h3 class="stat-block__heading heading heading--three">{{ stats_block.title }}</h3>
             </div>
         {% endif %}
-        
-        
+
+
         {% for stat in stats_block.statistics %}
             {% with stat=stat.value %}
                 <div class="stat-block__item-container grid">
@@ -43,11 +43,11 @@
         {% endfor %}
     </div>
 
-    {% if stats_block.link %}
+    {% if stats_block.link_url and stats_block.link_text %}
         <div class="stat-block__footer grid">
             <div class="stat-block__footer-action">
-                <a href="{{ stats_block.link }}" class="stat-block__footer-link link link--tertiary link--link">
-                    {% if stats_block.action %}<span class="link__label">{{ stats_block.action }}</span>{% endif %}
+                <a href="{{ stats_block.link_url }}" class="stat-block__footer-link link link--tertiary link--link">
+                    {% if stats_block.link_text %}<span class="link__label">{{ stats_block.link_text }}</span>{% endif %}
                     <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                 </a>
             </div>
