--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
@@ -49,7 +49,7 @@
                     </div>
                 {% endfor %}
             </div>
-            {% if related_section.link %}
+            {% if related_section.link.url %}
                 <div class="grid">
                     <div class="section__action">
                         <a class="link link--secondary link--link body body--one" href="{{ related_section.link.url }}">
