--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--innovation.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--innovation.html
@@ -132,7 +132,7 @@
                 </section>
             {% endif %}
 
-            {% if page.contact %}
+            {% if page.contact_image %}
                 <section class="section bg bg--light">
                     <div class="section__notch section__notch--small-med-only">
                         <div class="section__notch-fill section__notch-fill--second-col"></div>
