--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.html
@@ -34,9 +34,9 @@
                             <h2 class="introduction__text section__heading heading heading--five">
                                 {{ page.introduction }}
                             </h2>
-                            {% if page.introduction_link %}
-                                <a href="{{ page.introduction_link }}" class="introduction__link link link--tertiary link--link">
-                                    <span class="link__label">{{ page.introduction_link_text }}</span>
+                            {% if page.about_page %}
+                                <a href="{% pageurl page.about_page %}" class="introduction__link link link--tertiary link--link">
+                                    <span class="link__label">{% firstof page.about_page.title 'Read more' %}</span>
                                     <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                                 </a>
                             {% endif %}
@@ -47,25 +47,27 @@
 
         <div class="page__content landing-page">
 
-            {% if page.enterprise_highlights %}
+            {% if related_pages_highlights %}
                 <section class="landing-page__top section section--start bg bg--dark">
 
                     <div class="section__row section__row--last-large research-highlights">
-                        {% if page.enterprise_highlights_title %}
+                        {% if page.highlights_title %}
                             <div class="section__header grid">
                                 <h2 class="section__heading section__heading--primary heading heading--four">
-                                    {{ page.enterprise_highlights_title }}
+                                    {{ page.highlights_title }}
                                 </h2>
                             </div>
                         {% endif %}
                         <div class="section__content grid">
-                            {% include "patterns/organisms/carousel/carousel.html" with carousel=page.enterprise_highlights modifier='carousel carousel--no-margin' datatag='data-carousel' %}     
-                            <div class="section__action">
-                                <a class="link link--primary link--link body body--two" href="/research">
-                                    <span class="link__label">See all research</span>
-                                    <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
-                                </a>    
-                            </div>
+                            {% include "patterns/organisms/carousel/carousel.html" with carousel=related_pages_highlights modifier='carousel carousel--no-margin' datatag='data-carousel' %}
+                            {% if page.highlights_link_text %}
+                                <div class="section__action">
+                                    <a class="link link--primary link--link body body--two" href="{{ page.highlights_link_url }}">
+                                        <span class="link__label">{{ page.highlights_link_text }}</span>
+                                        <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
+                                    </a>
+                                </div>
+                            {% endif %}
                         </div>
                     </div>
 
@@ -76,59 +78,60 @@
                 </section>
             {% endif %}
 
-            {% if page.related_research_centres_schools %}
-                <section class="landing-page__middle section section--start section--opposite-notch bg bg--light">
-
-                    <div class="section__row">
-                        {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with related_sections=page.related_research_centres_schools title="Research centres & Schools" modifier="meta-new-line related-content--small-margin-mobile" %}
+            {% if page_list %}
+                <section class="section section--opposite-notch bg bg--light">
+                    <div class="section__row section__row--first section__row--last-large">
+                        {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with related_sections=page_list title=page.page_list_title modifier="after-action related-content--meta-new-line" %}
                     </div>
-
-                    <div class="section__notch section__notch--opposite">
-                        <div class="section__notch-fill section__notch-fill--second-col"></div>
-                    </div>
+                    {% if not stats_block %}
+                        <div class="section__notch section__notch--opposite">
+                            <div class="section__notch-fill section__notch-fill--third-col"></div>
+                        </div>
+                    {% endif %}
 
                 </section>
             {% endif %}
 
-            {% if page.middle_feature_image %}
+            {% if featured_image %}
                 <section class="section bg bg--dark">
                     <div class="section__row section__row--first section__row--last">
-                        {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=false curriculum=false subheading=false has_meta=True heading=page.middle_feature_heading meta_heading=page.middle_feature_meta_heading meta_copy=page.middle_feature_meta_text href=page.middle_feature_meta_link image=page.middle_feature_image modifier="tight-heading" %}
+                        {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=false curriculum=false subheading=false has_meta=True heading=featured_image.title meta_heading=featured_image.subtitle meta_copy=featured_image.description href=featured_image.get_link_url image=featured_image.image modifier="tight-heading" %}
                     </div>
-
                     <div class="section__notch">
-                        <div class="section__notch-fill section__notch-fill--second-col"></div>
+                        <div class="section__notch-fill section__notch-fill--third-col"></div>
                     </div>
                 </section>
             {% endif %}
 
-            {% if page.research or page.text_teaser %}
+            {% if slideshow_block or page.text_teaser %}
                 <section class="section bg bg--light">
 
-                    {% if page.research %}
+                    {% if slideshow_block %}
                         <div class="section__row section__row--first section__row--last">
                             <div class="partnerships partnerships--tight-heading">
-                                {% if page.research.title %}
+                                {% if slideshow_block.title %}
                                     <div class="partnerships__header grid">
-                                        <h2 class="partnerships__heading heading heading--two">{{ page.research.title }}</h2>
+                                        <h2 class="partnerships__heading heading heading--two">{{ slideshow_block.title }}</h2>
+                                        {% if slideshow_block.summary %}
+                                        <p class="partnerships__introduction">  {{ slideshow_block.summary }}</p>
+                                        {% endif %}
                                     </div>
                                 {% endif %}
                                 <div class="partnerships__carousel">
-                                    {% include "patterns/organisms/carousel/carousel--square.html" with carousel=page.research.slides modifier='carousel--square' datatag='data-square-carousel' %}
+                                    {% include "patterns/organisms/carousel/carousel--square.html" with carousel=slideshow_block.slides modifier='carousel--square' datatag='data-square-carousel' %}
                                 </div>
                             </div>
                         </div>
                     {% endif %}
 
-                    {% if page.text_teaser %}
+                    {% if page.cta_block %}
                         <div class="section__row {% if page.research == false %}section__row--first{% endif %}section__row--last-large">
-                            {% include "patterns/molecules/text-teaser/text-teaser.html" with teaser=page.text_teaser %}
+                        {% for block in page.cta_block %}
+                            {% include "patterns/molecules/text-teaser/text-teaser.html" with teaser=block.value %}
+                        {% endfor %}
                         </div>
                     {% endif %}
 
-                    <div class="section__notch">
-                        <div class="section__notch-fill section__notch-fill--second-col"></div>
-                    </div>
 
                 </section>
             {% endif %}
@@ -146,7 +149,7 @@
                 </section>
             {% endif %}
 
-            {% if page.contact %}
+            {% if page.contact_image %}
                 <section class="section bg bg--light">
                     <div class="section__notch section__notch--small-med-only">
                         <div class="section__notch-fill section__notch-fill--second-col"></div>
