Seperating data-tab-hash to allow existing tabs to be used on project-filters

--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -36,7 +36,7 @@
 
         <div class="page__content">
 
-            <div class="tabs js-tabs">
+            <div class="tabs js-tabs" data-tab-hash>
 
                 {% include "patterns/molecules/tab-nav/tab-nav.html" with modifier="bg bg--dark" sticky="true" %}
 
