--- a/rca/static_src/sass/components/_categories-tablist.scss
+++ b/rca/static_src/sass/components/_categories-tablist.scss
@@ -42,7 +42,8 @@
         }
 
         &--selected {
-            @include underline-hover-target();
+            @include underline-hover();
+            @include underline-hover-target-reset();
             color: $color--black;
             font-family: $font--secondary;
 
