--- a/rca/static_src/sass/components/_categories-tablist.scss
+++ b/rca/static_src/sass/components/_categories-tablist.scss
@@ -57,7 +57,7 @@
                 height: 6px;
                 border-radius: 50%;
                 overflow: hidden;
-                background-color: $color--black;
+                background-color: currentColor;
             }
         }
 
