--- a/rca/static_src/sass/components/_reset.scss
+++ b/rca/static_src/sass/components/_reset.scss
@@ -4,6 +4,13 @@
     position: relative;
     display: inline-flex;
     align-items: center;
+    opacity: 1;
+    transition: opacity $cubic-transition;
+
+    &--hidden {
+        @include hidden();
+        opacity: 0;
+    }
 
     &__icon {
         margin-right: ($gutter / 4);
