--- a/rca/project_styleguide/templates/patterns/molecules/text-teaser/text-teaser.html
+++ b/rca/project_styleguide/templates/patterns/molecules/text-teaser/text-teaser.html
@@ -10,13 +10,13 @@
             {% endif %}
             {% if teaser.link and not teaser.page %}
                 <a class="text-teaser__link link link--primary link--link body body--two" href="{{ teaser.link }}">
-                    <span class="link__label">{% firstof teaser.action teaser.link.action %}</span>
+                    <span class="link__label">{% firstof teaser.action teaser.link.title %}</span>
                     <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                 </a>
             {% endif %}
             {% if teaser.page %}
                 <a class="text-teaser__link link link--primary link--link body body--two" href="{% pageurl teaser.page %}">
-                    <span class="link__label">{% firstof teaser.action teaser.link.action teaser.page.title %}</span>
+                    <span class="link__label">{% firstof teaser.action teaser.link.title teaser.page.title %}</span>
                     <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                 </a>
             {% endif %}
