--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -33,33 +33,37 @@
         </header>
 
         <div class="page__content js-detect-sticking js-tabs" id="results">
+
+            <form id="listing_results">
    
-            <section class="section section--opposite-notch bg bg--dark filter-bar filter-bar--large" data-filter-bar>
-                <div class="section__notch section__notch--opposite">
-                    <div class="section__notch-fill section__notch-fill--content-height section__notch-fill--fourth-col section__notch-fill--second-col@medium">
-                        {% include "patterns/molecules/categories-tablist/categories-tablist.html" with value=page.filters modifier="large" reset=True %}
+                <section class="section section--opposite-notch bg bg--dark filter-bar filter-bar--large" data-filter-bar>
+                    <div class="section__notch section__notch--opposite">
+                        <div class="section__notch-fill section__notch-fill--content-height section__notch-fill--fourth-col section__notch-fill--second-col@medium">
+                            {% include "patterns/molecules/categories-tablist/categories-tablist.html" with value=page.filters modifier="large" reset=True %}
+                        </div>
+                    </div>
+                </section>
+
+                <section class="filter-bar filter-bar--small bg bg--light">
+                    <a class="filter-bar__link body body--two" href="#" data-filter-launcher>
+                        <span class="filter-bar__label">Filter projects</span>
+                        <svg width="12" height="8" class="filter-bar__icon" aria-hidden="true">
+                            <use xlink:href="#arrow"></use>
+                        </svg>
+                    </a>
+                </section>
+
+                <div class="filter-takeover bg bg--light">
+                    <div class="filter-takeover__container">
+                        {% for item in page.filters.items %}
+                            <div class="filter-takeover__tab-content tabs__panel tabs__panel--hidden js-tab-panel" id="{{ item.tab_title|slugify }}" role="tabpanel" aria-labelledby="tab-{{ item.tab_title|slugify }}">
+                                {% include "patterns/molecules/filter-tab-options/filter-tab-options.html" with title="projects" filter_options=item.children %}
+                            </div>
+                        {% endfor %}
                     </div>
                 </div>
-            </section>
 
-            <section class="filter-bar filter-bar--small bg bg--light">
-                <a class="filter-bar__link body body--two" href="#">
-                    <span class="filter-bar__label">Filter projects</span>
-                    <svg width="12" height="8" class="filter-bar__icon" aria-hidden="true">
-                        <use xlink:href="#arrow"></use>
-                    </svg>
-                </a>
-            </section>
-
-            <div class="filter-takeover bg bg--light">
-                <div class="filter-takeover__container">
-                    {% for item in page.filters.items %}
-                        <div class="filter-takeover__tab-content tabs__panel tabs__panel--hidden js-tab-panel" id="{{ item.tab_title|slugify }}" role="tabpanel" aria-labelledby="tab-{{ item.tab_title|slugify }}">
-                            {% include "patterns/molecules/filter-tab-options/filter-tab-options.html" with title="projects" filter_options=item.children %}
-                        </div>
-                    {% endfor %}
-                </div>
-            </div>
+            </form>
 
             <section class="section bg bg--light">
 
