--- a/rca/static_src/sass/components/_filter-tab-options.scss
+++ b/rca/static_src/sass/components/_filter-tab-options.scss
@@ -75,7 +75,12 @@
     }
 
     &__clear {
-        margin-bottom: ($gutter * 2);
+        margin-right: ($gutter * 2);
+
+        @include media-query(large) {
+            position: relative;
+            top: 5px;
+        }
     }
 
     &__clear-link {
@@ -95,7 +100,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: flex-end;
+        justify-content: space-between;
         border-style: solid;
         border-width: 1px 0 0;
         padding: ($gutter * 2) 0;
