--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -32,52 +32,49 @@
             </div>
         </header>
 
-        <div class="page__content js-detect-sticking js-tabs" id="results">
+        <form class="page__content js-detect-sticking js-tabs" id="results">
 
-            <form id="listing_results">
-   
-                <section class="section section--opposite-notch bg bg--dark filter-bar filter-bar--large" data-filter-bar>
-                    <div class="section__notch section__notch--opposite">
+            <section class="section section--opposite-notch bg bg--dark filter-bar filter-bar--large" data-filter-bar>
+                <div class="section__notch section__notch--opposite">
 
-                        <div class="section__notch-fill section__notch-fill--content-height section__notch-fill--fourth-col section__notch-fill--second-col@medium">
-                            {% include "patterns/molecules/categories-tablist/categories-tablist.html" with value=page.filters modifier="large" reset=True %}
-                        </div>
-
-                        <div class="filter-tab-options filter-tab-options--mobile">
-                            <div class="filter-tab-options__footer layout__start-one layout__span-two layout__@large-start-two layout__@large-span-four">
-                                <div class="filter-tab-options__clear layout__start-one layout__span-two layout__@large-span-three">
-                                    <a class="filter-tab-options__clear-link hidden" href="#" data-filters-clear-category>Clear</a>
-                                </div>
-                                <button class="filter-tab-options__button link link--primary" data-filter-submit>
-                                    <span class="link__label">Show results</span>
-                                    <svg width="12" height="8" class="link__icon link__icon--rotated" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
-                                </button>            
-                            </div>
-                        </div>
-                        
+                    <div class="section__notch-fill section__notch-fill--content-height section__notch-fill--fourth-col section__notch-fill--second-col@medium">
+                        {% include "patterns/molecules/categories-tablist/categories-tablist.html" with value=page.filters modifier="large" reset=True %}
                     </div>
-                </section>
 
-                <section class="filter-bar filter-bar--small bg bg--light">
-                    <a class="filter-bar__link body body--two" href="#" data-filter-launcher>
-                        <span class="filter-bar__label">Filter projects</span>
-                        <svg width="12" height="8" class="filter-bar__icon" aria-hidden="true">
-                            <use xlink:href="#arrow"></use>
-                        </svg>
-                    </a>
-                </section>
-
-                <div class="filter-takeover bg bg--light">
-                    <div class="filter-takeover__container">
-                        {% for item in page.filters.items %}
-                            <div class="filter-takeover__tab-content tabs__panel tabs__panel--hidden js-tab-panel" id="{{ item.tab_title|slugify }}" role="tabpanel" aria-labelledby="tab-{{ item.tab_title|slugify }}">
-                                {% include "patterns/molecules/filter-tab-options/filter-tab-options.html" with title="projects" filter_options=item.children %}
+                    <div class="filter-tab-options filter-tab-options--mobile">
+                        <div class="filter-tab-options__footer layout__start-one layout__span-two layout__@large-start-two layout__@large-span-four">
+                            <div class="filter-tab-options__clear layout__start-one layout__span-two layout__@large-span-three">
+                                <a class="filter-tab-options__clear-link hidden" href="#" data-filters-clear-category>Clear</a>
                             </div>
-                        {% endfor %}
+                            <button class="filter-tab-options__button link link--primary" data-filter-submit>
+                                <span class="link__label">Show results</span>
+                                <svg width="12" height="8" class="link__icon link__icon--rotated" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
+                            </button>            
+                        </div>
                     </div>
+                    
                 </div>
+            </section>
 
-            </form>
+            <section class="filter-bar filter-bar--small bg bg--light">
+                <a class="filter-bar__link body body--two" href="#" data-filter-launcher>
+                    <span class="filter-bar__label">Filter projects</span>
+                    <svg width="12" height="8" class="filter-bar__icon" aria-hidden="true">
+                        <use xlink:href="#arrow"></use>
+                    </svg>
+                </a>
+            </section>
+
+            <div class="filter-takeover bg bg--light">
+                <div class="filter-takeover__container">
+                    {% for item in page.filters.items %}
+                        <div class="filter-takeover__tab-content tabs__panel tabs__panel--hidden js-tab-panel" id="{{ item.tab_title|slugify }}" role="tabpanel" aria-labelledby="tab-{{ item.tab_title|slugify }}">
+                            {% include "patterns/molecules/filter-tab-options/filter-tab-options.html" with title="projects" filter_options=item.children %}
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+
 
             <section class="section bg bg--light">
 
@@ -124,7 +121,7 @@
 
             
         
-        </div>
+        </form>
 
     </div>
 {% endblock %}
