Attempting to get scrolling working with overflow

--- a/rca/static_src/sass/components/_filter-tab-options.scss
+++ b/rca/static_src/sass/components/_filter-tab-options.scss
@@ -119,6 +119,11 @@
 
     .filter-takeover & {
         height: 100%;
+        padding-top: ($gutter * 2);
+
+        @include media-query(large) {
+            padding-top: 0;
+        }
 
         &__container {
             display: flex;
