--- a/rca/project_styleguide/templates/patterns/molecules/filter-tab-options/filter-tab-options.html
+++ b/rca/project_styleguide/templates/patterns/molecules/filter-tab-options/filter-tab-options.html
@@ -4,7 +4,7 @@
 
         {% if item.tab_title %}
             <div class="filter-tab-options__header layout__span-two">
-                <h2 class="filter-tab-options__heading heading heading--five">Filter results</h2>
+                <h2 class="filter-tab-options__heading heading heading--five">Filter by</h2>
                 <button class="filter-tab-options__back" aria-label="Back to categories" data-filter-back>
                     <svg width="12" height="8" class="filter-tab-options__back-icon" aria-hidden="true">
                         <use xlink:href="#arrow"></use>
