--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -56,7 +56,7 @@
                 </div>
             </section>
 
-            <section class="filter-bar filter-bar--small bg bg--light">
+            <section class="filter-bar filter-bar--small bg bg--light" data-filter-bar-small>
                 <a class="filter-bar__link body body--two" href="#" data-filter-launcher>
                     <span class="filter-bar__label">Filter projects</span>
                     <svg width="12" height="8" class="filter-bar__icon" aria-hidden="true">
