--- a/rca/static_src/sass/components/_filter-takeover.scss
+++ b/rca/static_src/sass/components/_filter-takeover.scss
@@ -2,18 +2,17 @@
     display: none;
 
     &__container {
-        -webkit-overflow-scrolling: touch;
-
         @include media-query(large) {
-            height: 100%;
+            height: calc(var(--vh, 1vh) * 100);
         }
     }
 
     &__tab-content {
-        height: 100%;
+        height: calc(var(--vh, 1vh) * 100);
+        overflow-y: scroll;
 
         @include media-query(large) {
-            padding-top: ($gutter * 5);
+            padding-top: ($gutter * 7);
         }
     }
 
@@ -27,9 +26,5 @@
         right: 0;
         height: calc(var(--vh, 1vh) * 100);
         width: 100%;
-
-        @include media-query(large) {
-            padding-top: ($gutter * 2);
-        }
     }
 }
