--- a/rca/static_src/sass/components/_filter-bar.scss
+++ b/rca/static_src/sass/components/_filter-bar.scss
@@ -120,7 +120,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: calc(var(--vh, 1vh) * 100);
             background-color: $color--white;
         }
     }
