--- a/rca/static_src/sass/components/_filter-takeover.scss
+++ b/rca/static_src/sass/components/_filter-takeover.scss
@@ -9,7 +9,7 @@
 
     &__tab-content {
         height: calc(var(--vh, 1vh) * 100);
-        overflow-y: scroll;
+        overflow-y: overlay;
         overflow-x: hidden;
     }
 
