--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -42,11 +42,11 @@
                     </div>
 
                     <div class="filter-tab-options filter-tab-options--mobile">
-                        <div class="filter-tab-options__footer layout__start-one layout__span-two layout__@large-start-two layout__@large-span-four">
-                            <div class="filter-tab-options__clear layout__start-one layout__span-two layout__@large-span-three">
+                        <div class="filter-tab-options__footer layout__start-one layout__span-two layout__@large-start-two layout__@large-span-four grid">
+                            <div class="filter-tab-options__clear layout__start-one layout__span-one layout__@large-start-two">
                                 <a class="filter-tab-options__clear-link hidden" href="#" data-filters-clear-category>Clear</a>
                             </div>
-                            <button class="filter-tab-options__button link link--primary" data-filter-submit>
+                            <button class="filter-tab-options__button link link--primary layout__start-two layout__span-one layout__@large-start-four" data-filter-submit>
                                 <span class="link__label">Show results</span>
                                 <svg width="12" height="8" class="link__icon link__icon--rotated" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                             </button>            
