--- a/rca/static_src/sass/components/_filter-tab-options.scss
+++ b/rca/static_src/sass/components/_filter-tab-options.scss
@@ -108,11 +108,33 @@
         justify-content: space-between;
         border-style: solid;
         border-width: 1px 0 0;
-        padding: ($gutter * 2) 0;
         background-color: $color--white;
 
         @include media-query(large) {
-            &::after {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            width: 100%;
+            // overflow: hidden;
+        }
+
+        &::before {
+            @include media-query(large) {
+                content: '';
+                position: absolute;
+                top: -1px;
+                left: 0;
+                height: 1px;
+                background-color: $color--white;
+                width: calc(
+                    var(--outer-grid-width) + #{$gutter * 3}
+                ); // out grid plus .grid left-padding
+            }
+        }
+
+        &::after {
+            @include media-query(large) {
                 content: '';
                 position: absolute;
                 top: 0;
@@ -131,6 +153,7 @@
         padding: ($gutter / 2) 0 0;
         font-family: $font--secondary;
         cursor: pointer;
+        margin-left: auto;
     }
 
     .filter-takeover & {
@@ -144,6 +167,8 @@
             width: 100%;
             height: 100%;
             padding-top: ($gutter * 7);
+            overflow-y: overlay;
+            overflow-x: hidden;
         }
 
         &__container {
@@ -158,6 +183,28 @@
 
             @include media-query(large) {
                 padding-bottom: ($gutter * 5);
+            }
+        }
+
+        &__footer {
+            @include media-query(large) {
+                padding-top: $gutter;
+                padding-bottom: ($gutter * 1.5);
+            }
+        }
+
+        &__clear {
+            &::before {
+                @include media-query(large) {
+                    content: '';
+                    display: block;
+                    height: 100px;
+                    position: absolute;
+                    top: -($gutter * 2.25);
+                    left: -1px;
+                    width: 1px;
+                    background-color: $color--grid-line-dark;
+                }
             }
         }
     }
