Checkbox styling and name update

--- a/rca/static_src/sass/components/_filter-tab-options.scss
+++ b/rca/static_src/sass/components/_filter-tab-options.scss
@@ -77,6 +77,10 @@
         }
     }
 
+    &__checkbox {
+        @include hidden();
+    }
+
     &__clear {
         margin-right: ($gutter * 2);
 
