Ordering filters alphabetically

--- a/rca/static_src/sass/components/_filter-tab-options.scss
+++ b/rca/static_src/sass/components/_filter-tab-options.scss
@@ -45,7 +45,9 @@
         grid-template-columns: 1fr 1fr;
 
         @include media-query(large) {
-            grid-template-columns: 1fr 1fr 1fr;
+            display: block;
+            column-count: 2;
+            column-gap: 33.33%;
         }
     }
 
