New external icon

--- a/rca/project_styleguide/templates/patterns/atoms/sprites/sprites.html
+++ b/rca/project_styleguide/templates/patterns/atoms/sprites/sprites.html
@@ -28,6 +28,10 @@
         <path d="M-1.43051e-06 4.66715L9.46667 4.66715L7.06667 7.06715L8 8.00049L12 4.00049L8 0.000486374L7.06667 0.93382L9.46667 3.33382L-1.43051e-06 3.33382V4.66715Z"></path>
     </symbol>
 
+    <symbol id="arrow-external" viewBox="0 0 11 13">
+        <path d="M8 12v1H0v-1h8zM10.243.758v5.657h-1.32V3.02L2.23 9.714l-.943-.942L7.98 2.078H4.586V.758h5.657z" fill-rule="nonzero"></path>
+    </symbol>
+
     <symbol id="close" viewBox="0 0 14 14">
         <path d="M14 1.21724L12.7828 0L7 5.78276L1.21724 0L0 1.21724L5.78276 7L0 12.7828L1.21724 14L7 8.21724L12.7828 14L14 12.7828L8.21724 7L14 1.21724Z"></path>
     </symbol>
