Adding seperate external link component for use if we know 100% the link is external

--- a/rca/project_styleguide/templates/patterns/atoms/link-tertiary/link-tertiary--external.html
+++ b/rca/project_styleguide/templates/patterns/atoms/link-tertiary/link-tertiary--external.html
@@ -1,4 +1,4 @@
-<a href="{{ value.href }}" class="link link--tertiary link--link">
+<a href="{{ value.href }}" class="link link--tertiary link--link link--external" target="_blank">
     <span class="link__label">{{ value.text }}</span>
-    <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
+    <svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg>
 </a>
