Making cursor pointer for labels

--- a/rca/static_src/sass/components/_filter-tab-options.scss
+++ b/rca/static_src/sass/components/_filter-tab-options.scss
@@ -71,6 +71,7 @@
         @include underline-hover();
         position: relative;
         font-family: $font--primary;
+        cursor: pointer;
 
         &.selected {
             @include underline-hover-target();
