Hardcoding theme-light to guide page

--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -3,7 +3,7 @@
 {% get_settings %}
 
 {% block body_class %}
-    app--guide no-hero
+    app--guide no-hero theme-light
 {% endblock %}
 
 {% block content %}
