Hardcoding theme for no hero pages

--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
@@ -3,7 +3,7 @@
 {% get_settings %}
 
 {% block body_class %}
-    app--staff-detail
+    app--staff-detail theme-light
 {% endblock %}
 
 {% block title_prefix %}
